# stm32h5_template_drivers

./: .clangd  CMakeLists.txt  adc.cpp  bx_can.cpp  can_internal.cpp  can_internal.hpp  clangd  common.cpp  eeprom_itf_crc_stm32h5.cpp  eeprom_itf_flash_stm32h5.cpp  flex_can.cpp  gpio.cpp  m_can.cpp  multi_can.cpp  nv_memory.cpp  opaque_adc.hpp  opaque_nv_memory.hpp  opaque_pwm.hpp  opaque_timer.hpp  pwm.cpp  rtc.cpp  sdmmc.cpp  serial.cpp  spi.cpp  spi_proto.cpp  stm32h5xx_hal_msp.c  stm32h5xx_it.c  stm32h5xx_it.h  stm_common.hpp  timer.cpp  usbd_msc.cpp  watchdog.cpp
cmake/: FindSTM32CubeH5.cmake
config/: eeprom_emul_conf.h  mapping.hpp  mapping_defaults.hpp  mapping_types.hpp  stm32_hal.h  stm32h5xx_hal_conf.h
opaque/: opaque_adc.cpp  opaque_adc.hpp  opaque_can.hpp  opaque_common.cpp  opaque_common.hpp  opaque_gpio.cpp  opaque_gpio.hpp  opaque_nv_memory.cpp  opaque_nv_memory.hpp  opaque_pwm.cpp  opaque_pwm.hpp  opaque_serial.cpp  opaque_serial.hpp  opaque_timer.cpp  opaque_timer.hpp  opaque_watchdog.cpp  opaque_watchdog.hpp
usb/: usb_cdc.h  usb_cdc_standalone.c  ux_standalone_support.c  ux_stm32_config.h  ux_user.h
utils/: common.hpp
